--- a/analise_dados_mlb.ipynb
+++ b/analise_dados_mlb.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "metadata": {
         "id": "NBcF5IFmom5X"
       },
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "4I5zMZ3erV_r"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "id": "wq00CXyUsRw1",
         "outputId": "67694755-16e6-4615-b4bf-1fdfb157444d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,6 +77,173 @@
           },
           "metadata": {},
           "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's analyze whether there is missing data in the table so that the statistics are not wrong."
+      ],
+      "metadata": {
+        "id": "IRn9efxoTXg7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dt_baseball[pd.isnull(dt_baseball.name)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "id": "coNal9WeToj9",
+        "outputId": "84b9c38b-e4dc-462f-96bd-c97e158e5ee4"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [name, team, position, game, at_bat, run, hit, double, triple, home_run, rbi, total_base, walk, strike_out, stolen_base, caught_stealing, obp, slg, bat_avg]\n",
+              "Index: []"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-9620737f-ae95-4a01-86a9-68dc9e02b825\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>team</th>\n",
+              "      <th>position</th>\n",
+              "      <th>game</th>\n",
+              "      <th>at_bat</th>\n",
+              "      <th>run</th>\n",
+              "      <th>hit</th>\n",
+              "      <th>double</th>\n",
+              "      <th>triple</th>\n",
+              "      <th>home_run</th>\n",
+              "      <th>rbi</th>\n",
+              "      <th>total_base</th>\n",
+              "      <th>walk</th>\n",
+              "      <th>strike_out</th>\n",
+              "      <th>stolen_base</th>\n",
+              "      <th>caught_stealing</th>\n",
+              "      <th>obp</th>\n",
+              "      <th>slg</th>\n",
+              "      <th>bat_avg</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9620737f-ae95-4a01-86a9-68dc9e02b825')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-9620737f-ae95-4a01-86a9-68dc9e02b825 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-9620737f-ae95-4a01-86a9-68dc9e02b825');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     },
@@ -101,7 +268,7 @@
         "id": "1W4ZnNvdnwbf",
         "outputId": "84a91d76-18d8-45c3-8385-6d0b4194a500"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -173,7 +340,7 @@
         "id": "mzffrBBTGZcM",
         "outputId": "9bff06f8-eab3-460a-99c4-660f2df4e80a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +394,7 @@
         "id": "nKGYQomSHcnM",
         "outputId": "30e8cb0d-ef77-490f-e11c-6c83ccbc6f02"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +441,7 @@
         "id": "ML-bWtzFKLXE",
         "outputId": "f70ea56e-25b3-4340-d652-f00fa433f4af"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +607,7 @@
         "id": "pi-mv9y7syzE",
         "outputId": "88e76c92-75aa-4669-c4eb-a7d8e808bbd0"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +1027,7 @@
         "id": "pkHv8mv-WMW_",
         "outputId": "2187092b-f5f5-493f-9f03-a4dfadafd5cf"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +1099,7 @@
         "id": "bqsMPUTMYqZL",
         "outputId": "8ec7e5e9-9509-4f57-faab-187004242621"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +1153,7 @@
         "id": "8bzl8afVZs7n",
         "outputId": "e86feeaf-15e4-4634-f4e5-8e7a702f869e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1190,7 @@
         "id": "ksgb51bbaf78",
         "outputId": "d4c86168-047d-41a1-bda9-b0a74c001561"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1378,7 +1545,7 @@
         "id": "uSXh17ZFdMtF",
         "outputId": "c5c20fe6-e117-4f5d-ba82-e499cf94eacc"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1950,7 +2117,7 @@
         "id": "wO4ogoZetPJo",
         "outputId": "944c036c-773d-47c2-e535-202e1fa2dc3d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1993,7 +2160,7 @@
         "id": "34wUsbmvwH2h",
         "outputId": "bea2d695-ffd5-47e3-a6db-304d48c17b73"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2035,7 +2202,7 @@
         "id": "pKY6iytQtpF3",
         "outputId": "d16e8018-9e46-4f97-ebab-000cbf631910"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2070,7 +2237,7 @@
         "id": "393e6FuEJDMf",
         "outputId": "ff82dcb3-7089-46d4-9152-3e94219ab2d9"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2136,7 +2303,7 @@
         "id": "Aj4iNCHLKHng",
         "outputId": "eca13cba-32d5-4272-c9e5-2ff040948833"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2478,7 +2645,7 @@
         "id": "tEJ10YO4N_Ux",
         "outputId": "2423f676-bdc9-49cb-921e-da2bb3d8fe22"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2558,7 +2725,7 @@
         "id": "a6iC_jDygwQm",
         "outputId": "fb7bd9ee-85d9-4e54-9221-2054407599b6"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2900,7 +3067,7 @@
         "id": "RNYSvka_kFv9",
         "outputId": "88d6030e-4aed-476d-c59f-0eb72e3e8f7c"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2945,7 +3112,7 @@
         "id": "s-Nh_A8BpTHe",
         "outputId": "8c241571-bce5-437d-b99c-21f0bcbc3f23"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3013,7 +3180,7 @@
         "id": "3aXGd2LPqQQz",
         "outputId": "116bbb13-7744-4c74-f718-a1348d1054d1"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3052,7 +3219,7 @@
         "id": "amTsrtClshXX",
         "outputId": "57819e12-bc2a-4cc3-916a-1361ff091ac6"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3537,7 +3704,7 @@
         "id": "MaRdybYGvDXm",
         "outputId": "a02da8f7-c2d2-42dd-ec84-93a5a3de062d"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
