best offensive player

--- a/analise_dados_mlb.ipynb
+++ b/analise_dados_mlb.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 99,
       "metadata": {
         "id": "NBcF5IFmom5X"
       },
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 100,
       "metadata": {
         "id": "4I5zMZ3erV_r"
       },
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 101,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
               "(1199, 19)"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -103,7 +103,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 102,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,7 +191,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 104,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -246,7 +246,7 @@
               "dtype: bool"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 104,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -329,7 +329,7 @@
               "Index: []"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 105,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -579,7 +579,7 @@
               "[5 rows x 22 columns]"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -652,7 +652,7 @@
               "Name: name, dtype: object"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 108,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -672,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -709,7 +709,7 @@
               "Name: 0, dtype: object"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -729,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -745,7 +745,7 @@
               "Name: team, dtype: object"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -765,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 111,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -890,7 +890,7 @@
               "[1199 rows x 3 columns]"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 111,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -910,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1250,7 +1250,7 @@
               "[10 rows x 22 columns]"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 112,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1293,7 +1293,7 @@
               "Name: home_run, dtype: float64"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1313,7 +1313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1336,7 +1336,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 114,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1356,7 +1356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1371,7 +1371,7 @@
               "50.534612176814015"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1391,7 +1391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1437,7 +1437,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1457,7 +1457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1570,7 +1570,7 @@
               "[544 rows x 2 columns]"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1590,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1649,7 +1649,7 @@
               "Name: name, dtype: object"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1669,7 +1669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 119,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1782,7 +1782,7 @@
               "[1199 rows x 2 columns]"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1802,7 +1802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 120,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1827,7 +1827,7 @@
               "Name: home_run, dtype: int64"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1847,7 +1847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1893,7 +1893,7 @@
               "Name: home_run, dtype: int64"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1914,7 +1914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 122,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1930,7 +1930,7 @@
               "'J Bautista'"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1950,7 +1950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2205,7 +2205,7 @@
               "53     J Bautista        54  TOR"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2225,7 +2225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3105,7 +3105,7 @@
               "[30 rows x 22 columns]"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3130,7 +3130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [
         {
@@ -3517,7 +3517,7 @@
               "[12 rows x 22 columns]"
             ]
           },
-          "execution_count": 56,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3530,12 +3530,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Best offensive player:"
+        "Best offensive players:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [
         {
@@ -4570,7 +4570,7 @@
               "[36 rows x 22 columns]"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -4582,15 +4582,77 @@
         "p75_rbi = float(dt_baseball.describe()[\"rbi\"][\"75%\"])\n",
         "p75_home_run = float(dt_baseball.describe()[\"home_per_game\"][\"75%\"])\n",
         "p25_strike_out = float(dt_baseball.describe()[\"strike_out_per_bat\"][\"25%\"])\n",
-        "dt_baseball[[\"obp\", \"slg\", \"bat_avg\", \"rbi\", \"home_run\", \"strike_out\"]]\n",
+        "columns_best_offensive = [\"obp\", \"slg\", \"bat_avg\", \"rbi\", \"home_run\", \"strike_out\"]\n",
         "values_best_offensive = [p75_obp, p75_slg, p75_bat_avg, p75_rbi, p75_home_run, p25_strike_out]\n",
         "\n",
-        "dt_baseball.loc[(dt_baseball[\"obp\"] > p75_obp) & \n",
+        "players_offensive = dt_baseball.loc[(dt_baseball[\"obp\"] > p75_obp) & \n",
         "                (dt_baseball[\"slg\"] > p75_slg) &\n",
         "                (dt_baseball[\"bat_avg\"] > p75_bat_avg) &\n",
         "                (dt_baseball[\"rbi\"] > p75_rbi) &\n",
         "                (dt_baseball[\"home_per_game\"] > p75_home_run) &\n",
-        "                (dt_baseball[\"strike_out_per_bat\"] < p25_strike_out)]\n"
+        "                (dt_baseball[\"strike_out_per_bat\"] < p25_strike_out)].copy()\n",
+        "\n",
+        "players_offensive\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Choosing just one offensive player as the best"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 141,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "name                  A Pujols\n",
+              "team                       STL\n",
+              "position                    1B\n",
+              "game                       159\n",
+              "at_bat                     587\n",
+              "run                        115\n",
+              "hit                        183\n",
+              "double                      39\n",
+              "triple                       1\n",
+              "home_run                   1.0\n",
+              "rbi                        1.0\n",
+              "total_base                 350\n",
+              "walk                       103\n",
+              "strike_out            0.654762\n",
+              "stolen_base                 14\n",
+              "caught_stealing              4\n",
+              "obp                        1.0\n",
+              "slg                        1.0\n",
+              "bat_avg               0.839286\n",
+              "home_per_game         0.264151\n",
+              "rbi_per_game          0.742138\n",
+              "strike_out_per_bat    0.870528\n",
+              "geral_score           0.915675\n",
+              "Name: 35, dtype: object"
+            ]
+          },
+          "execution_count": 141,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "column_extra = players_offensive[\"strike_out_per_bat\"]\n",
+        "players_offensive[columns_best_offensive] = scaler.fit_transform(players_offensive[columns_best_offensive])\n",
+        "players_offensive[\"strike_out_per_bat\"] = 1 - players_offensive[\"strike_out_per_bat\"]\n",
+        "players_offensive[\"geral_score\"] = players_offensive[columns_best_offensive].mean(axis=1)\n",
+        "\n",
+        "best_player_offensive = players_offensive.loc[players_offensive[\"geral_score\"].idxmax()]\n",
+        "players_offensive[\"strike_out_per_bat\"] = column_extra\n",
+        "best_player_offensive"
       ]
     }
   ],
