descriptions to the operations

--- a/analise_dados_mlb.ipynb
+++ b/analise_dados_mlb.ipynb
@@ -4604,6 +4604,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 144,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Coluna obp = 0.953, p = 0.130\n",
+            "Coluna slg = 0.926, p = 0.019\n",
+            "Coluna bat_avg = 0.975, p = 0.581\n",
+            "Coluna rbi = 0.936, p = 0.039\n",
+            "Coluna home_run = 0.928, p = 0.022\n",
+            "Coluna strike_out = 0.948, p = 0.094\n"
+          ]
+        }
+      ],
+      "source": [
+        "from scipy.stats import shapiro\n",
+        "\n",
+        "\n",
+        "for i in columns_best_offensive:\n",
+        "    stat, p = shapiro(players_offensive[i])\n",
+        "    print(f'Coluna {i} = {stat:.3f}, p = {p:.3f}')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 141,
       "metadata": {},
       "outputs": [
