--- a/analise_dados_mlb.ipynb
+++ b/analise_dados_mlb.ipynb
@@ -5650,7 +5650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 783,
+      "execution_count": 784,
       "metadata": {},
       "outputs": [
         {
@@ -5659,16 +5659,6 @@
           "text": [
             "Oakland Athletics had 25 above-average players in all features\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "(36, 22)"
-            ]
-          },
-          "execution_count": 783,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -5680,9 +5670,7 @@
         "markdown_oak = players_oak.to_markdown(index=False)\n",
         "\n",
         "#scores for all the players\n",
-        "all_players_oak = players_score(dt_baseball.loc[dt_baseball[\"team\"] == \"OAK\"][\"name\"], \"OAK\")\n",
-        "\n",
-        "dt_baseball.loc[dt_baseball[\"team\"] == \"OAK\"].shape"
+        "all_players_oak = players_score(dt_baseball.loc[dt_baseball[\"team\"] == \"OAK\"][\"name\"], \"OAK\")"
       ]
     },
     {
